# radical

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: rad_alloc.h  rad_assert.h  rad_graphics.h  radical.h
src/: dummy.c
